crates/wdl-analysis/tests/validation/duplicate-requirements/source.errors
error: task `t` contains a duplicate requirements section
  ┌─ tests/validation/duplicate-requirements/source.wdl:8:5
  │
6 │     requirements {}
  │     ------------ first requirements section is defined here
7 │ 
8 │     requirements {}
  │     ^^^^^^^^^^^^ this requirements section is a duplicate

error: conflicting task name `t`
   ┌─ tests/validation/duplicate-requirements/source.wdl:14:6
   │
 5 │ task t {
   │      - the task with the conflicting name is here
   ·
14 │ task t {
   │      ^ this task conflicts with a previously used name

